project name krushi

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             <tr>
                 <td>sugar cane</td>
                 <td>3000</td>
-                <td>girish sawant</td>
+                <td>girish mane</td>
             </tr>
 
             <tr>
