--- a/about.html
+++ b/about.html
@@ -64,6 +64,14 @@
                 <p class="para">soybean, (Glycine max), also called soja bean or soya bean, annual legume of the pea family (Fabaceae) and its edible seed. The soybean is economically the most important bean in the world, providing vegetable protein for millions of people and ingredients for hundreds of chemical products.</p>
             </div>
 
+            <div class="card">
+                <img src="https://image.shutterstock.com/image-photo/jowar-sorghum-grain-crop-farm-260nw-1682878723.jpg" alt=""/>
+                <h3>hybrid</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit illum nihil omnis sapiente, consequatur laborum possimus asperiores ratione praesentium beatae similique saepe explicabo qui sint repellat labore porro error animi.</p>
+            </div>
+
+            
+
         </section>
     </main>
 
